--- a/index.html
+++ b/index.html
@@ -1,76 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>foil</title>
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: #fff;
-      font-family: sans-serif;
-    }
-    h1 {
-      margin-bottom: 20px;
-    }
-    .counter {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-    }
-    .value {
-      font-size: 60px;
-      font-weight: bold;
-      user-select: none;
-    }
-    button {
-      font-size: 24px;
-      width: 60px;
-      height: 60px;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contador Foil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>foil</h1>
-  <div class="counter">
-    <button id="up">▲</button>
-    <div class="value" id="value">0</div>
-    <button id="down">▼</button>
-  </div>
-
-  <script>
-    const API = 'http://localhost:3000/contador';
-    const valueEl = document.getElementById('value');
-    const up = document.getElementById('up');
-    const down = document.getElementById('down');
-
-    async function atualizar() {
-      try {
-        const res = await fetch(API);
-        const data = await res.json();
-        valueEl.textContent = data.value;
-      } catch (e) {
-        valueEl.textContent = '⚠️';
-      }
-    }
-
-    async function alterar(op) {
-      await fetch(API + '?op=' + op, { method: 'POST' });
-      atualizar();
-    }
-
-    up.addEventListener('click', () => alterar('inc'));
-    down.addEventListener('click', () => alterar('dec'));
-
-    setInterval(atualizar, 1000);
-    atualizar();
-  </script>
+    <div class="counter">
+        <h1>Foil</h1>
+        <div class="controls">
+            <button id="decrement">⬅️</button>
+            <span id="count">0</span>
+            <button id="increment">➡️</button>
+        </div>
+    </div>
+    <script src="client.js"></script>
 </body>
 </html>
