--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contador Foil Diva</title>
+<title>Foil Diva + Imagem + Chat</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,11 +17,17 @@
 
     <div class="image-section">
         <h2>Imagem compartilhada</h2>
-        <input type="text" id="image-url" placeholder="Cole a URL da imagem" />
-        <button id="update-image">Atualizar</button>
+        <input type="file" id="image-file" />
         <div class="image-preview">
             <img id="shared-image" src="" alt="Imagem compartilhada" />
         </div>
+    </div>
+
+    <div class="chat-section">
+        <h2>Chat</h2>
+        <div id="chat-box"></div>
+        <input type="text" id="chat-input" placeholder="Digite uma mensagem" />
+        <button id="send-chat">Enviar</button>
     </div>
 </div>
 
