10 - refiz tudo dnv hell yeaah

--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
 </head>
 <body>
 <div class="counter">
-    <h1>Foil</h1>
-    <div class="controls">
-        <button id="decrement">⬅️</button>
-        <span id="count">0</span>
-        <button id="increment">➡️</button>
-    </div>
-
-    <div class="image-section">
-        <h2>Imagem compartilhada</h2>
-        <input type="file" id="image-file" />
-        <div class="image-preview">
-            <img id="shared-image" src="" alt="Imagem compartilhada" />
-        </div>
-    </div>
-
-    <div class="chat-section">
-        <h2>Chat</h2>
-        <div id="chat-box"></div>
-        <input type="text" id="chat-input" placeholder="Digite uma mensagem" />
-        <button id="send-chat">Enviar</button>
-    </div>
+<h1>Foil</h1>
+<div class="controls">
+<button id="decrement">⬅️</button>
+<span id="count">0</span>
+<button id="increment">➡️</button>
 </div>
+
+
+<div class="image-section">
+<h2>Galeria</h2>
+<input type="file" id="image-file" />
+<div id="image-grid"></div>
+</div>
+
+
+<div class="chat-section">
+<h2>Chat</h2>
+<div id="chat-box"></div>
+<input type="text" id="chat-input" placeholder="Digite uma mensagem" />
+<button id="send-chat">Enviar</button>
+</div>
+</div>
+
 
 <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
 <script src="client.js"></script>
