--- a/index.html
+++ b/index.html
@@ -2,31 +2,50 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Foil + Galeria + Chat</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="galeria">
-    <h2>galeria</h2>
-    <input type="file" id="image-file">
-    <div id="image-grid"></div>
+  <!-- Título centralizado -->
+  <header class="page-title">Foil</header>
+
+  <!-- Container principal -->
+  <div id="main-container">
+    <!-- Galeria -->
+    <section id="galeria">
+      <header>
+        <h2>Galeria</h2>
+        <button id="btn-excluir" title="Excluir imagens">🗑️</button>
+      </header>
+      <input type="file" id="image-file" accept="image/*" disabled>
+      <div id="image-grid"></div>
+    </section>
+
+    <!-- FOIL -->
+    <section id="foil">
+      <button id="increment">▲</button>
+      <div id="count">0</div>
+      <button id="decrement">▼</button>
+    </section>
+
+    <!-- Chat -->
+    <section id="chat">
+      <label for="nome">Insira seu nome:</label>
+      <input type="text" id="nome" placeholder="Seu nome">
+      <h2>Chat Insano</h2>
+      <div id="chat-box"></div>
+      <div id="chat-controls">
+        <input type="text" id="chat-input" placeholder="Digite uma mensagem" disabled>
+        <button id="send-chat" disabled>Enviar</button>
+      </div>
+    </section>
   </div>
 
-  <div id="foil">
-    <h1>FOIL</h1>
-    <div class="controls">
-      <button id="decrement">⬆️</button>
-      <span id="count">0</span>
-      <button id="increment">⬇️</button>
-    </div>
-  </div>
-
-  <div id="chat">
-    <h2>chat insano</h2>
-    <div id="chat-box"></div>
-    <input type="text" id="chat-input" placeholder="Digite uma mensagem">
-    <button id="send-chat">Enviar</button>
+  <!-- Modal -->
+  <div id="modal">
+    <span onclick="fecharModal()">&times;</span>
+    <img id="modal-img">
   </div>
 
   <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
